# dpm_srm

./: CMakeLists.txt  README.md  SRM.cpp  SRM.hpp  SRM3D.cpp  SRM3D.hpp  __init__.py  main.cpp  pyproject.toml  setup.py  srm_example.py  srm_test.py  wrapper.cpp
.github/workflows/: build.yml
include/: SRM.hpp  SRM2D.hpp  SRM3D.hpp
wrappers/: wrapper.cpp
