[build-system]
requires = ["setuptools", "wheel", "pybind11"] #"scikit-build-core"
build-backend = "setuptools.build_meta"        #"scikit_build_core.build" 

# [tool.scikit-build-core]
# source_dir = "."

# [tool.cibuildwheel]
# platforms = ["manylinux_x86_64"] #, "macosx_x86_64", "win_amd64"]
# python_versions = ["cp38", "cp39", "cp310", "cp311", "cp312"]

[project]
name = "dpm_srm"
version = "0.1.3"
description = "Statistical Region Merging Segmentation"
authors = [{ name = "Digital Porous Media", email = "bcchang@utexas.edu" }]
requires-python = ">=3.8"
license = { file = 'LICENSE' }
# dependencies = ["numpy"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: BSD License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/DigitalPorousMedia"
Repository = "https://github.com/DigitalPorousMedia/dpm_srm"
Issues = "https://github.com/DigitalPorousMedia/dpm_srm/issues"
