[build-system]
requires = ["setuptools", "wheel", "pybind11"] #"scikit-build-core"
build-backend = "setuptools.build_meta"        #"scikit_build_core.build" 

[project]
name = "dpm_srm"
version = "0.1.4"
description = "Statistical Region Merging Segmentation"
authors = [{ name = "Digital Porous Media", email = "bcchang@utexas.edu" }]
requires-python = ">=3.8"
license = { text = 'BSD License' }
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    # Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DigitalPorousMedia"
Repository = "https://github.com/DigitalPorousMedia/dpm_srm"
Issues = "https://github.com/DigitalPorousMedia/dpm_srm/issues"
