[build-system]
requires = ["setuptools", "wheel", "pybind11"] #"scikit-build-core"
build-backend = "setuptools.build_meta"        #"scikit_build_core.build" 

[project]
name = "dpm_srm"
version = "0.1.8"
description = "Statistical Region Merging Segmentation"
readme = "README.md"
authors = [{ name = "Digital Porous Media", email = "bcchang@utexas.edu" }]
requires-python = ">=3.8"
license = { text = 'BSD License' }
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    # Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/digital-porous-media/"
Repository = "https://github.com/digital-porous-media/dpm_srm"
Issues = "https://github.com/digital-porous-media/dpm_srm/issues"
